7051798: SA-JDI: NPE in Frame.addressOfStackSlot(Frame.java:244)

Reviewed-by: kvn